--- a/src/components/ui/cuatom_input/cuatom_input.module.scss
+++ b/src/components/ui/cuatom_input/cuatom_input.module.scss
@@ -16,19 +16,43 @@
     }
 
     border: 1px solid $color_g4;
+
+    &:has(input:active) {
+      border: 1px solid $color_p1;
+    }
+
+    &:has(input:focus) {
+      border: 1px solid $color_p1;
+    }
+
+    &:has(input:focus-visible) {
+      border: 1px solid $color_p1;
+    }
   }
 
-  &:has(input:active) {
-    border: 1px solid $color_p1;
+  &.v2 {
+    input {
+      border-radius: 2px;
+      // border: none;
+      // outline: none !important;
+      border-width: 2px;
+
+      width: 100%;
+
+      &:active,
+      &:focus,
+      &:focus-visible {
+        border: 2px solid $color_p1 !important;
+
+
+      }
+    }
+
+
+
   }
 
-  &:has(input:focus) {
-    border: 1px solid $color_p1;
-  }
 
-  &:has(input:focus-visible) {
-    border: 1px solid $color_p1;
-  }
 
   &.error {
     animation: 0.5s shake;
@@ -41,15 +65,19 @@
   0% {
     transform: translate(0);
   }
+
   20% {
     transform: translate(-4px);
   }
+
   40% {
     transform: translate(4px);
   }
+
   60% {
     transform: translate(-4px);
   }
+
   80% {
     transform: translate(4px);
   }
