--- a/src/components/screens/home/sections/banner/banner.module.scss
+++ b/src/components/screens/home/sections/banner/banner.module.scss
@@ -81,7 +81,6 @@
       .right {
         width: 100%;
         margin-top: 50px;
-        
 
         .card {
           top: 20px;
@@ -142,6 +141,7 @@
       // gap: 20px;
 
       .BCard {
+        width: 250px;
         .c_left {
           height: 50px;
           width: 50px;
