--- a/src/components/screens/candidates/portal/request/buy_request/payment/payments.module.scss
+++ b/src/components/screens/candidates/portal/request/buy_request/payment/payments.module.scss
@@ -17,16 +17,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-
-    > div {
-      display: grid;
+    width: 100%;
+    .row {
+      display: flex;
       gap: 10px;
-      grid-template-columns: calc(50% - 5px) calc(50% - 5px);
-
-      > div {
-        display: flex;
-        gap: 10px;
-      }
     }
   }
 }
