--- a/src/components/skill_selector/skill_selector.module.scss
+++ b/src/components/skill_selector/skill_selector.module.scss
@@ -13,12 +13,14 @@
       font-weight: bold;
       color: $color-g3;
       letter-spacing: -1.5px;
+      width: 20px;
     }
 
     min-height: 45px;
     > div {
       display: flex;
       gap: 10px;
+      flex-wrap: wrap;
     }
 
     .bubble {
@@ -27,6 +29,10 @@
       padding: 2px 10px;
       border-radius: 20px;
       font-size: 14px;
+      word-break: keep-all;
+      display: flex;
+      align-items: center;
+
       svg {
         margin-bottom: 3px;
         cursor: pointer;
