--- a/src/components/cards/job_card/job_card.module.scss
+++ b/src/components/cards/job_card/job_card.module.scss
@@ -1,40 +1,49 @@
-.JobCard {
-  box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px,
-    rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px,
-    rgba(42, 51, 70, 0.04) 0px 2px 2px -1px,
-    rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px,
-    rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px,
-    rgba(42, 51, 70, 0.03) 0px 10px 10px -5px,
-    rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
-  padding: 16px;
-  margin-bottom: 20px;
-  background-color: white;
+.card {
+  padding: 20px;
+  margin: 12px;
 
-  .top {
-    b {
-      color: rgb(33, 33, 33);
-      opacity: 0.85;
+  @include respond-below(md) {
+    margin: 12px 0;
+  }
+
+  &.notLoading {
+    cursor: pointer;
+    background-color: white;
+    box-shadow: rgba(99, 99, 99, 0.1) 0px 1px 4px 0px;
+    &:hover {
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     }
+  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  height: 300px;
 
-    > div {
-      margin-top: 6px;
-      display: flex;
-      gap: 10px;
-      align-items: center;
+  .logo {
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .label {
+    color: $color_g2;
+    font-weight: lighter;
+    font-size: 13px;
+    border: 1px solid $color_g2;
+    width: fit-content;
+    padding: 1px 10px;
+    border-radius: 4px;
 
-      > div {
-        font-size: 12px;
-        background-color: $color-p1_mild;
-        color: $color-p1;
-        padding: 0px 8px;
-      }
-
-      p {
-        color: $color-g3;
-        font-size: 14px;
-      }
+    svg {
+      color: $color_p1;
     }
+  }
 
+  .ac {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     .title {
       display: flex;
       justify-content: space-between;
@@ -44,33 +53,128 @@
     }
   }
 
-  .bottom {
-    margin-top: 12px;
+  .top {
     display: flex;
-    align-items: center;
-    gap: 6px;
-
-    .logo {
-      border-radius: 4px;
-      overflow: hidden;
+    justify-content: space-between;
+    h3 {
+      margin: 0;
+      font-size: 18px;
     }
-
     p {
-      font-size: 15px;
-    }
-
-    small {
       font-size: 14px;
-      color: $color-g3;
+      color: $color_g3;
+    }
+  }
+
+  hr {
+    margin: 0 0 10px 0;
+    opacity: 0.2;
+  }
+
+  .details {
+    > div {
+      font-size: 14px;
+      color: $color_g3;
+      margin-bottom: 10px;
       svg {
-        margin: 0 2px 2px 0;
-        font-size: 12px;
+        margin-right: 8px;
       }
     }
   }
 
-  &:hover {
-    background-color: $color-p1_mild;
-    cursor: pointer;
+  .controls {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 16px;
+    .tag {
+      background-color: $color_g1;
+      padding: 0 16px;
+      border-radius: 2px;
+      font-size: 14px;
+    }
+
+    > div {
+      > p {
+        color: $color_p1;
+        font-size: 15px;
+      }
+    }
   }
 }
+
+// .JobCard {
+//   box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px,
+//     rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px,
+//     rgba(42, 51, 70, 0.04) 0px 2px 2px -1px,
+//     rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px,
+//     rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px,
+//     rgba(42, 51, 70, 0.03) 0px 10px 10px -5px,
+//     rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+//   padding: 16px;
+//   margin-bottom: 20px;
+//   background-color: white;
+
+//   .top {
+//     b {
+//       color: rgb(33, 33, 33);
+//       opacity: 0.85;
+//     }
+
+//     > div {
+//       margin-top: 6px;
+//       display: flex;
+//       gap: 10px;
+//       align-items: center;
+
+//       > div {
+//         font-size: 12px;
+//         background-color: $color-p1_mild;
+//         color: $color-p1;
+//         padding: 0px 8px;
+//       }
+
+//       p {
+//         color: $color-g3;
+//         font-size: 14px;
+//       }
+//     }
+
+//     .title {
+//       display: flex;
+//       justify-content: space-between;
+//       p {
+//         color: green;
+//       }
+//     }
+//   }
+
+//   .bottom {
+//     margin-top: 12px;
+//     display: flex;
+//     align-items: center;
+//     gap: 6px;
+
+//     .logo {
+//       border-radius: 4px;
+//       overflow: hidden;
+//     }
+
+//     p {
+//       font-size: 15px;
+//     }
+
+//     small {
+//       font-size: 14px;
+//       color: $color-g3;
+//       svg {
+//         margin: 0 2px 2px 0;
+//         font-size: 12px;
+//       }
+//     }
+//   }
+
+//   &:hover {
+//     background-color: $color-p1_mild;
+//     cursor: pointer;
+//   }
+// }
