--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -7,6 +7,33 @@
   font-size: 15px;
   color: $color_g2;
 
+  .topBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 18px;
+    background-color: $color_p1;
+    color: white;
+    @include flexCenter;
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+    z-index: 1000;
+    animation: 0.5s show ease-in-out;
+  }
+
+  @keyframes show {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+
   h4 {
     // color: $color_p1;
     color: white;
