--- a/src/components/skill_selector/skill_selector.module.scss
+++ b/src/components/skill_selector/skill_selector.module.scss
@@ -43,17 +43,27 @@
   .options {
     position: absolute;
     background-color: $color-g1;
+
+    overflow: auto;
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
+    .category {
+      border-bottom: 2px solid $color-g4;
+      padding-bottom: 10px;
+    }
+
     h4 {
-      font-size: 18px;
-      padding-left: 10px;
+      font-size: 17px;
+      padding: 10px 0 5px 10px;
+      margin: 0;
+      font-weight: bold;
+      color: $color-p1;
       //   padding: 5px 5px 5px 10px;
     }
 
     p {
-      padding: 5px 10px 5px 30px;
+      padding: 5px 10px 5px 32px;
       cursor: pointer;
 
       &:hover {
